--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.9",
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.4.0",
+    "axios": "^1.3.3",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.1",
     "framer-motion": "^5.3.1",
