Co-authored-by: Bhushan Wanjari <Bhushan21z@users.noreply.github.com>

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "postcss": "^8.3.11",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
