--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "react-lottie": "^1.2.3"
+    "react-lottie": "^1.2.3",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
